# gpu-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  build_run.sh  mypy.ini  pyproject.toml  settings-dev.ini
gpu_scraper/: config.py  constants.py  main.py  product.py
gpu_scraper/notifications/: telegram.py
gpu_scraper/web/: amd.py  base.py  cast_informatica.py
