[tool.poetry]
name = "gpu-scraper"
version = "0.1.0"
description = ""
authors = ["Mattia Gentil <gentil.mattia@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"

requests = "^2.25.1"
python-decouple = "^3.4"
tenacity = "^7.0.0"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
notebook = "^6.2.0"

[tool.poetry.scripts]
scrape="gpu_scraper.main:main"

[tool.black]
line-length = 100
exclude = '''
(
    \venv |
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
